# AddressToProxy

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  run.py
docs/superpowers/plans/: 2026-05-17-address-to-proxy-cli.md
docs/superpowers/specs/: 2026-05-17-address-to-proxy-design.md
src/address_to_proxy/: __init__.py  api.py  cli.py  config.py  errors.py  llm.py  matching.py  models.py  resolver.py  validation.py
tests/: test_api.py  test_cli.py  test_config.py  test_llm.py  test_matching.py  test_models.py  test_project_scaffold.py  test_proxy1024.py  test_resolver.py  test_run_script.py  test_validation.py
