[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "address-to-proxy"
version = "0.1.1"
description = "Resolve postal addresses into proxy account connection details."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.scripts]
address-to-proxy = "address_to_proxy.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
